# 1.7.0

* Support attributes in HTML paths in style mappings.

* Improve error message when failing to find the body element in a document.

# 1.6.0

* Add transformDocument to the TypeScript declarations.

* Support merged paragraphs when revisions are tracked.

* Use xmldom instead of sax to parse XML documents. This should remove the need
  to polyfill stream in the browser.

* Adjust the internal implementation to remove the use of Buffer on the critical
  path, and provide APIs to read images and documents with embedded style maps
  without using Buffer. This should remove the need to polyfill Buffer in the
  browser. Since TextDecoder is now used, the minimum version of node.js is now
  v12.

* Remove the use of the util module. This should remove the need to polyfill
  util in the browser.

# 1.5.1

* Fix: npm 7 changed the behaviour of prepublish, causing the browser build not
  to be updated before publishing to npm. We now use prepare instead of
  prepublish, which has the same behaviour that prepublish previously had.

# 1.5.0

* Only use the alt text of image elements as a fallback. If an alt attribute is
  returned from the function passed to mammoth.images.imgElement, that value
  will now be preferred to the alt text of the image element.

# 1.4.21

* Ignore w:u elements when w:val is missing.

# 1.4.20

* Emit warning instead of throwing exception when image file cannot be found for
  a:blip elements.

# 1.4.19

* Add TypeScript declarations.

# 1.4.18

* When extracting raw text, convert tab elements to tab characters.

* Handle internal hyperlinks created with complex fields.

* Update JSZip to 3.2.0. This addresses CVE-2021-23413 in JSZip.

# 1.4.17

* Handle w:num with invalid w:abstractNumId.
* Update underscore to 1.13.1.

# 1.4.16

* Convert symbols in supported fonts to corresponding Unicode characters.

# 1.4.15

* Support numbering defined by paragraph style.

# 1.4.14

* Add style mapping for all caps.

# 1.4.13
