@@ -8,15 +8,26 @@ exports.read = read;
 exports.readXmlFromZipFile = readXmlFromZipFile;
 
 var xmlNamespaceMap = {
+    // Transitional mode
     "http://schemas.openxmlformats.org/wordprocessingml/2006/main": "w",
     "http://schemas.openxmlformats.org/officeDocument/2006/relationships": "r",
     "http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing": "wp",
     "http://schemas.openxmlformats.org/drawingml/2006/main": "a",
     "http://schemas.openxmlformats.org/drawingml/2006/picture": "pic",
+
+    // Strict mode
+    "http://purl.oclc.org/ooxml/wordprocessingml/main": "w",
+    "http://purl.oclc.org/ooxml/officeDocument/relationships": "r",
+    "http://purl.oclc.org/ooxml/drawingml/wordprocessingDrawing": "wp",
+    "http://purl.oclc.org/ooxml/drawingml/main": "a",
+    "http://purl.oclc.org/ooxml/drawingml/picture": "pic",
+
+    // Common
     "http://schemas.openxmlformats.org/package/2006/content-types": "content-types",
-    "urn:schemas-microsoft-com:vml": "v",
     "http://schemas.openxmlformats.org/markup-compatibility/2006": "mc",
+    "urn:schemas-microsoft-com:vml": "v",
     "urn:schemas-microsoft-com:office:word": "office-word"
+
 };
 
 
